package pt.leo.facade;

public class Main {
    public static void main(String[] args) {
        ProductInstaller productInstaller = new ProductInstaller();
        productInstaller.install();
    }
}
