package pt.leo.facade;

public class OperatingSystem {
    public void update() {
        System.out.println("Updating OS...");
    }
}
