package pt.leo.facade;

public class Product {

    public String name;

    public Product(String name) {
        this.name = name;
    }
}
