package pt.leo.facade;

public class ProductConfiguration {
}
