package pt.leo.facade;

public class Requirement {
    String name;

    public Requirement(String name) {
        this.name = name;
    }
}
